--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build Strapi
-        run: npm install && npm run build
-
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.2.0
         with:
@@ -32,7 +29,7 @@ jobs:
             # Install dependencies
             npm install
 
-            # Build the project (optional, if not done in GitHub Actions)
+            # Build the project
             npm run build
 
             # Restart the application using pm2
